--- a/src/components/JobItem/JobItem.css
+++ b/src/components/JobItem/JobItem.css
@@ -1,50 +1,53 @@
-.job-item-body{
-    border: solid 1px black;
-    display: flex;
-    flex-direction: column;
-    
-    position: relative;
+.job-item-body {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  padding: 1rem;
 }
 
-.job-item-body p{
-    margin: 0;
+.job-item-body p {
+  margin: 0;
 }
-
 
 /* name and address */
-.job-item-dot{
-    background-color: black;
-    height: 5px;
-    width: 5px;
-    border-radius: 100%;
+.job-item-dot {
+  background-color: black;
+  height: 5px;
+  width: 5px;
+  border-radius: 100%;
 }
-.job-item-name-address{
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-
-    gap: 1rem;
+.job-item-name-address {
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  color:rgb(75,75,75);
+  gap: 1rem;
 }
 
 /* distance */
-.job-item-distance, .job-item-due-date{
-    font-size: 17px;
+.job-item-distance,
+.job-item-due-date {
+  font-size: 17px;
+  color:rgb(125,125,125)
 }
 
 /* price */
-.job-item-price{
-    font-size: 40px;
+.job-item-price {
+  font-size: 35px;
 }
 
 /* accept buttion */
-.job-item-accept-button{
-    width: 6rem;
-    height: 3rem;
-    border: none;
-    background-color: rgb(230,230,230);
-    border-radius: 7px;
+.job-item-accept-button {
+  width: 6rem;
+  height: 3rem;
+  border: none;
+  background-color: rgb(230, 230, 230);
+  border-radius: 7px;
 
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
 }
