--- a/src/components/JobItem/JobItem.css
+++ b/src/components/JobItem/JobItem.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-
+  gap: .2rem;
   padding: 1rem;
 }
 
@@ -25,6 +25,7 @@
   align-items: center;
   color:rgb(75,75,75);
   gap: 1rem;
+  margin-bottom: .05rem;
 }
 
 /* distance */
@@ -37,6 +38,7 @@
 /* price */
 .job-item-price {
   font-size: 35px;
+  margin-top: .2rem;
 }
 
 /* accept buttion */
@@ -44,10 +46,22 @@
   width: 6rem;
   height: 3rem;
   border: none;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(240, 240, 240);
   border-radius: 7px;
 
   position: absolute;
   bottom: 1rem;
   right: 1rem;
+
+  transition: background-color ease .1s;
+}
+
+
+.job-item-accept-button:hover{
+    background-color: rgb(230, 230, 230);
+    cursor: pointer;
+}
+
+.job-item-accept-button:active{
+    background-color: rgb(210,210,210);
 }
