--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -14,14 +14,41 @@ img {
   max-width: 100%;
 }
 
+h2 {
+  text-align: center;
+}
+
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
 
 .container {
   padding: 20px;
+  margin: auto;
+  position: relative;
+  width: 100%;
+  max-width: 400px;
 }
 
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.container .btn:hover {
+  background-color: black;
+}
 /* --------------------------------------------------------------------------------
 Button
 -------------------------------------------------------------------------------- */
