--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,8 +21,11 @@ h2 {
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
-
 .container {
+  padding: 20px;
+}
+
+.container1 {
   padding: 20px;
   margin: auto;
   position: relative;
@@ -30,7 +33,7 @@ Container
   max-width: 400px;
 }
 
-.container .btn {
+.container1 .btn {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -46,7 +49,7 @@ Container
   text-align: center;
 }
 
-.container .btn:hover {
+.container1 .btn:hover {
   background-color: black;
 }
 /* --------------------------------------------------------------------------------
