--- a/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
+++ b/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
@@ -48,3 +48,12 @@
   .keeper-home-active-navigate p{
     color: rgb(100,100,100)
   }
+
+  .keeper-header-link{
+    display: flex;
+    gap:1rem;
+  }
+
+  .keeper-home-link-title{
+    font-size: 20px;
+  }
