--- a/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
+++ b/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
@@ -42,7 +42,7 @@
     border-top: 6px solid transparent;
     border-bottom: 6px solid transparent;
     border-left: 8px solid rgb(100,100,100);
-    margin-right: 1rem;
+    margin-right: .5rem;
   }
 
   .keeper-home-active-navigate p{
@@ -56,4 +56,16 @@
 
   .keeper-home-link-title{
     font-size: 20px;
+  }
+
+  .keeper-home-active-navigate button{
+    background-color: transparent;
+    border: none;
+    font-size: 15px;
+    color: rgb(100,100,100);
+  }
+
+  .keeper-home-active-navigate button:hover{
+    cursor: pointer;
+    color: rgb(50,50,50);
   }
