--- a/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
+++ b/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
@@ -1,9 +1,10 @@
 .keeper-home-page-body{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4rem;
+    overflow-x: hidden;
 
 }
 .keeper-home-page-body p{
