--- a/src/components/JobItem/JobItem.css
+++ b/src/components/JobItem/JobItem.css
@@ -71,3 +71,20 @@
 .job-item-accept-button:active{
     background-color: rgb(210,210,210);
 }
+
+.keeper-home-page-find-job-button{
+  height: 3.5rem;
+  width: 15rem;
+  border: none;
+  border-radius: 5px;
+  transition: background-color ease .1s;
+}
+
+.keeper-home-page-find-job-button p{
+  font-size: 20px;
+}
+
+.keeper-home-page-find-job-button:hover{
+  cursor: pointer;
+  background-color: rgb(200,200,200);
+}
