--- a/src/components/AdminPage/AdminPage.css
+++ b/src/components/AdminPage/AdminPage.css
@@ -29,3 +29,37 @@
     flex-shrink: 1;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
+#table-container {
+    display: flex;
+    align-items: center;
+    max-width: 100%;
+    padding: 20px;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: black;
+    background-color: lightgrey;
+}
+
+.result-table {
+    border: 1px solid;
+    border-color: black;
+    width: 100%;
+    border-collapse: collapse;
+}
+  
+th {
+    border: 3px solid;
+    border-color: black;
+    border-radius: 5px;
+}
+  
+td {
+    border: 2px solid;
+    border-color: black;
+}
