add button on AdminPage nows greys out when the owner or keeper radio buttons are clicked

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -89,6 +89,12 @@ Button
   text-decoration: none;
 }
 
+.btn:disabled {
+  background-color: grey;
+  color: lightgrey;
+  cursor: default;
+}
+
 /* This line makes the "Register" and "Login" buttons look like links */
 .btn_asLink {
   padding: 0;
