--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -59,11 +59,11 @@ Button
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border-color: #014041;
+  border-color: #454B66;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
-  color: #f8f8f8;
+  background-color: #94C5CC;
+  color: #454B66;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
@@ -85,7 +85,8 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: #454B66;
+  color: #94C5CC;
   text-decoration: none;
 }
 
