--- a/src/components/JobItem/JobItem.css
+++ b/src/components/JobItem/JobItem.css
@@ -52,7 +52,6 @@
   width: 6rem;
   height: 3rem;
   border: none;
-  background-color: rgb(240, 240, 240);
   border-radius: 7px;
 
   position: absolute;
@@ -64,27 +63,10 @@
 
 
 .job-item-accept-button:hover{
-    background-color: rgb(230, 230, 230);
+    /* background-color: rgb(230, 230, 230); */
     cursor: pointer;
 }
 
 .job-item-accept-button:active{
-    background-color: rgb(210,210,210);
-}
-
-.keeper-home-page-find-job-button{
-  height: 3.5rem;
-  width: 15rem;
-  border: none;
-  border-radius: 5px;
-  transition: background-color ease .1s;
-}
-
-.keeper-home-page-find-job-button p{
-  font-size: 20px;
-}
-
-.keeper-home-page-find-job-button:hover{
-  cursor: pointer;
-  background-color: rgb(200,200,200);
+    /* background-color: rgb(210,210,210); */
 }
