--- a/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
+++ b/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
@@ -38,35 +38,53 @@
     font-size: 25px;
 }
 .arrow-right {
-    width: 0; 
-    height: 0; 
-    border-top: 6px solid transparent;
-    border-bottom: 6px solid transparent;
-    border-left: 8px solid rgb(100,100,100);
-    margin-right: .5rem;
-  }
+  width: 0; 
+  height: 0; 
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 8px solid rgb(100,100,100);
+  margin-right: .5rem;
+}
 
-  .keeper-home-active-navigate p{
-    color: rgb(100,100,100)
-  }
+.keeper-home-active-navigate p{
+  color: rgb(100,100,100)
+}
 
-  .keeper-header-link{
-    display: flex;
-    gap:1rem;
-  }
+.keeper-header-link{
+  display: flex;
+  gap:1rem;
+}
 
-  .keeper-home-link-title{
-    font-size: 20px;
-  }
+.keeper-home-link-title{
+  font-size: 20px;
+}
 
-  .keeper-home-active-navigate button{
-    background-color: transparent;
-    border: none;
-    font-size: 15px;
-    color: rgb(100,100,100);
-  }
+.keeper-home-active-navigate button{
+  background-color: transparent;
+  border: none;
+  font-size: 15px;
+  color: rgb(100,100,100);
+}
 
-  .keeper-home-active-navigate button:hover{
-    cursor: pointer;
-    color: rgb(50,50,50);
-  }
+.keeper-home-active-navigate button:hover{
+  cursor: pointer;
+  color: rgb(50,50,50);
+}
+
+
+.keeper-home-page-find-job-button{
+  height: 3.5rem;
+  width: 15rem;
+  border: none;
+  border-radius: 5px;
+  transition: background-color ease .1s;
+}
+
+.keeper-home-page-find-job-button p{
+  font-size: 20px;
+}
+
+.keeper-home-page-find-job-button:hover{
+  cursor: pointer;
+  /* background-color: rgb(200,200,200); */
+}
