--- a/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
+++ b/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
@@ -2,10 +2,18 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+  pointer-events: none;
+}
+
+.modal-overlay.open {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal {
@@ -13,7 +21,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: white;
+  border-radius: 5px;
   padding: 20px;
-  z-index: 1000;
+  z-index: 11;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+  pointer-events: none;
+}
+
+.modal.open {
+  opacity: 1;
+  pointer-events: auto;
 }
