--- a/src/components/OwnerActiveRequest/OwnerActiveRequest.css
+++ b/src/components/OwnerActiveRequest/OwnerActiveRequest.css
@@ -1,4 +1,6 @@
 .active-box-container {
-  background-color: white;
-  width: 15%;
+  background-color: #f9f0f4;
+  justify-content: center;
+  width: auto;
+  
 }
