--- a/src/components/OwnerViewRequestsPage/OwnerViewRequestsPage.css
+++ b/src/components/OwnerViewRequestsPage/OwnerViewRequestsPage.css
@@ -1,13 +1,31 @@
 .list-section {
-  background-color: hsl(193, 73%, 61%);
+  background-color: #94c5cc;
   padding: 4px;
+  
 }
 
-.list-active-requests,
-.list-completed-requests {
-  background-color: pink;
+.list-active-requests {
+  background-color: #d9b;
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  gap: 3rem;
+  width: 80rem;
 }
 
+.active-box-container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  gap: 3rem;
+
+  width: 80rem;
+}
+/* .list-active-requests,
 .list-completed-requests {
+  background-color: #d9b;
+} */
+
+/* .list-completed-requests {
   background-color: rgb(181, 235, 100);
-}
+} */
