adding different icons because some of the old ones did not have color changing properties. I added new ones that do

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -23,7 +23,7 @@
 
 .navLink {
   display: inline-block;
-  color: #f2f2f2;
+  color: #454B66;
   background-color: #d9b;
   text-align: center;
   padding: 24px 10px;
