--- a/src/components/OwnerViewRequestsPage/OwnerViewRequestsPage.css
+++ b/src/components/OwnerViewRequestsPage/OwnerViewRequestsPage.css
@@ -21,7 +21,7 @@
   gap: 3rem;
 
   width: 80rem;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .list-header {
@@ -33,6 +33,11 @@
 .break {
   flex-basis: 100%;
   height: 0;
+}
+
+.job-list-body {
+  display: flex;
+flex-direction: column
 }
 /* .list-active-requests,
 .list-completed-requests {
