--- a/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
+++ b/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 10;
   opacity: 0;
   transition: opacity 0.1s ease-in-out;
@@ -28,6 +28,7 @@
   opacity: 0;
   transition: opacity 0.1s ease-in-out;
   pointer-events: none;
+  box-shadow: rgba(50, 50, 50, 0.3) 2px 4px 10px 2px;
 }
 
 .modal.open {
