--- a/src/components/CreateJobForm/JobFormCheckList/JobFormCheckList.css
+++ b/src/components/CreateJobForm/JobFormCheckList/JobFormCheckList.css
@@ -57,3 +57,27 @@
   opacity: 1;
   animation-delay: 0.2;
 }
+
+/* button styles */
+.job-form-standard-button {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+.checklist-button-arrow {
+  transition: transform ease 0.1s;
+}
+
+.checklist-arrow-show {
+  transform: rotate(180deg);
+}
+
+.job-form-standard-body,
+.job-form-custom-body {
+  border-top: solid 1px rgb(100, 100, 100);
+  border-bottom: solid 1px rgb(100, 100, 100);
+  width: 40rem;
+}
