--- a/src/components/CreateJobForm/JobFormCheckList/JobFormCheckList.css
+++ b/src/components/CreateJobForm/JobFormCheckList/JobFormCheckList.css
@@ -67,6 +67,9 @@
   background-color: transparent;
   border: none;
 }
+.job-form-standard-button:hover {
+  cursor: pointer;
+}
 .checklist-button-arrow {
   transition: transform ease 0.1s;
 }
@@ -80,4 +83,62 @@
   border-top: solid 1px rgb(100, 100, 100);
   border-bottom: solid 1px rgb(100, 100, 100);
   width: 40rem;
+}
+
+.job-form-button-title p {
+  font-size: 20px;
+}
+
+/* standard checklist */
+
+.job-form-checklist-standard-body {
+  display: flex;
+  gap: 1rem;
+}
+
+.job-form-checklist-standard-main-body,
+.job-form-checklist-custom-list-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/* mock checkbox */
+.job-form-custom-button {
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mock-checkbox-title {
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+.mock-checkbox-title p {
+  font-size: 19px;
+  color: rgb(36, 103, 214);
+}
+.job-form-custom-button {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  border: none;
+  background-color: transparent;
+
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
+  border-radius: 5px;
+
+  width: 100%;
+
+  transition: background-color ease 0.12s;
+}
+
+.job-form-custom-button:hover {
+  cursor: pointer;
+  background-color: rgb(210, 210, 210, 0.4);
 }
