logo now works thanks to Peter, otherminor styling

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,6 +18,11 @@ img {
 
 h2 {
   text-align: center;
+  color: #454B66;
+}
+
+h3 {
+  color: #454B66;
 }
 
 /* --------------------------------------------------------------------------------
