--- a/src/components/AdminPage/AdminPage.css
+++ b/src/components/AdminPage/AdminPage.css
@@ -41,10 +41,10 @@
     max-width: 100%;
     padding: 20px;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px 1px 3px;
     border-radius: 10px;
     border-color: #454B66;
-    background-color: #94C5CC;
+    background-color: #DA9494;
 }
 
 .result-table {
@@ -55,12 +55,18 @@
 }
   
 th {
-    border: 3px solid;
+    border: 2px solid;
     border-color: #454B66;
     border-radius: 5px;
+    color: #454B66;
 }
   
 td {
-    border: 2px solid;
+    border: 1px solid;
     border-color: #454B66;
+    color: #454B66;
+}
+
+td:hover {
+    background-color: #94C5CC;
 }
