--- a/src/components/AdminPage/AdminPageModal.css
+++ b/src/components/AdminPage/AdminPageModal.css
@@ -1,7 +1,7 @@
 .modal-background {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #f9f0f4;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -12,7 +12,7 @@
     width: 500px;
     height: 500px;
     border-radius: 12px;
-    background-color: white;
+    background-color: #efefef;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
@@ -51,3 +51,4 @@
     justify-content: center;
     align-items: center;
 }
+
