added success modal after action

--- a/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
+++ b/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
@@ -22,14 +22,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  border-radius: 5px;
-  padding: 20px;
+  border-radius: 10px;
   z-index: 11;
   opacity: 0;
   transition: opacity 0.1s ease-in-out;
   pointer-events: none;
   box-shadow: rgba(50, 50, 50, 0.3) 2px 4px 10px 2px;
-
+}
+.modal-complete {
   height: 50rem;
   width: 35rem;
   overflow: scroll;
