--- a/src/components/AddPropertyPage/AddPropertyPage.css
+++ b/src/components/AddPropertyPage/AddPropertyPage.css
@@ -9,14 +9,13 @@
     background-color: rgba(255, 255, 255, 0.746);
 }
 
-.btn {
-    display:block; 
-    margin: 0 auto;
+.submit-btn {
+    margin-left: 240px; 
     margin-top: 10px;
 }
 
 .label {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
