added final styling to modal

--- a/src/components/JobDetails/JobDetails.css
+++ b/src/components/JobDetails/JobDetails.css
@@ -13,16 +13,20 @@
 }
 
 .success {
-  animation: success 0.1s ease-out;
+  animation: success 0.4s ease-out;
 }
 
 @keyframes success {
   0% {
-    transform: scale(50%);
+    transform: scale(0.1);
+    opacity: 0;
   }
-
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
   100% {
-    transform: scale(100%);
+    transform: scale(1);
   }
 }
 
