--- a/src/components/JobList/JobList.css
+++ b/src/components/JobList/JobList.css
@@ -1,14 +1,14 @@
-.job-list-body{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-
+.job-list-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-.job-list-container{
-    display: grid;
-    grid-template-columns: repeat(3, 30%);
-    justify-content: center;
-    gap: 3rem;
+.job-list-container {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  gap: 3rem;
 
-    width: 80rem;
+  width: 80rem;
 }
