--- a/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
+++ b/src/components/KeeperJobCompletion/CompletionModal/CompletionModal.css
@@ -23,6 +23,7 @@
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 10px;
+  padding: 20px;
   z-index: 11;
   opacity: 0;
   transition: opacity 0.1s ease-in-out;
