--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  color: #454B66;
+  color: #454b66;
 }
 
 h2 {
@@ -30,7 +30,7 @@ h3 {
 }
 
 p {
-  color: #454B66;
+  color: #454b66;
 }
 
 /* --------------------------------------------------------------------------------
@@ -87,8 +87,8 @@ Button
 
 .btn:hover {
   background-color: #94c5cc;
-  border-color: #da9494;
-  color: #454b66;
+  border-color: #454b66;
+  color: #f9f0f4;
   box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -108,8 +108,8 @@ Button
 
 .btn-inverted:hover {
   background-color: #94c5cc;
-  border-color: #da9494;
-  color: #454b66;
+  border-color: #454b66;
+  color: #f9f0f4;
   box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
