--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -78,7 +78,7 @@ Button
   border-width: 1px 1px 3px;
   border-radius: 4px;
   background-color: #da9494;
-  color: #454b66;
+  color: #f9f0f4;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
@@ -99,7 +99,7 @@ Button
   border-width: 1px 1px 3px;
   border-radius: 4px;
   background-color: #454b66;
-  color: #da9494;
+  color: #f9f0f4;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
