added margin left and right to landing-container/ reposition fade-in for some html tags

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,9 +1,12 @@
 .landing-container {
-  display: grid;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: 4.5em;
+  /* display: grid; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  padding: 10px;
+  margin: auto;
+  position: relative;
+  margin-left: 4em;
   margin-right: 4em;
 }
 
