--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,7 +8,7 @@
   position: relative;
   margin-left: 4em;
   margin-right: 4em;
-
+}
 /* --------------------------------------------------------------------------------
 container
 -------------------------------------------------------------------------------- */
