--- a/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
+++ b/src/components/UserPage/KeeperHomePage/KeeperHomePage.css
@@ -1,90 +1,86 @@
-.keeper-home-page-body{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
-    overflow-x: hidden;
-
+.keeper-home-page-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  overflow-x: hidden;
 }
-.keeper-home-page-body p{
-    margin: 0;
-}
-
-
-.keeper-home-page-active-job{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.keeper-home-active-info, .keeper-home-active-navigate{
-    display: flex;
-    align-items: center;
+.keeper-home-page-body p {
+  margin: 0;
 }
 
-
-.keeper-home-active-info{
-    gap:1rem
+.keeper-home-page-active-job {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-.keeper-home-active-dot{
-    height:10px;
-    width:10px;
-    background-color: red;
-    border-radius: 100%;
-
+.keeper-home-active-info,
+.keeper-home-active-navigate {
+  display: flex;
+  align-items: center;
 }
 
-.keeper-home-active-title{
-    font-size: 25px;
+.keeper-home-active-info {
+  gap: 1rem;
+}
+.keeper-home-active-dot {
+  height: 10px;
+  width: 10px;
+  background-color: red;
+  border-radius: 100%;
+}
+
+.keeper-home-active-title {
+  font-size: 25px;
 }
 .arrow-right {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-top: 6px solid transparent;
   border-bottom: 6px solid transparent;
-  border-left: 8px solid rgb(100,100,100);
-  margin-right: .5rem;
+  border-left: 8px solid rgb(100, 100, 100);
+  margin-right: 0.5rem;
 }
 
-.keeper-home-active-navigate p{
-  color: rgb(100,100,100)
+.keeper-home-active-navigate p {
+  color: rgb(100, 100, 100);
 }
 
-.keeper-header-link{
+.keeper-header-link {
   display: flex;
-  gap:1rem;
+  gap: 1rem;
 }
 
-.keeper-home-link-title{
+.keeper-home-link-title {
   font-size: 20px;
 }
 
-.keeper-home-active-navigate button{
+.keeper-home-active-navigate button {
   background-color: transparent;
   border: none;
   font-size: 15px;
-  color: rgb(100,100,100);
+  color: rgb(100, 100, 100);
 }
 
-.keeper-home-active-navigate button:hover{
+.keeper-home-active-navigate button:hover {
   cursor: pointer;
-  color: rgb(50,50,50);
+  color: rgb(50, 50, 50);
 }
 
-
-.keeper-home-page-find-job-button{
+.keeper-home-page-find-job-button {
   height: 3.5rem;
   width: 15rem;
   border: none;
   border-radius: 5px;
-  transition: background-color ease .1s;
+  transition: background-color ease 0.1s;
 }
 
-.keeper-home-page-find-job-button p{
+.keeper-home-page-find-job-button p {
   font-size: 20px;
 }
 
-.keeper-home-page-find-job-button:hover{
+.keeper-home-page-find-job-button:hover {
   cursor: pointer;
   /* background-color: rgb(200,200,200); */
 }
