--- a/src/components/KeeperJobCompletion/KeeperJobCompletion.css
+++ b/src/components/KeeperJobCompletion/KeeperJobCompletion.css
@@ -116,3 +116,22 @@ checklist
 .job-complete-show-more:hover {
   cursor: pointer;
 }
+
+.keeper-complete-textarea {
+  resize: none;
+  margin: 2rem;
+  margin-top: 1rem;
+  width: 40rem;
+  height: 10rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.5px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border: none;
+}
+
+.keeper-complete-textarea:focus {
+  outline: solid 1px rgb(200, 200, 200);
+}
