--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -54,18 +54,19 @@ Container
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: #3c887f;
+  background-color: #da9494;
   color: #f9f0f4;
   font-size: 16px;
   padding: 12px 24px;
   border: none;
   cursor: pointer;
+  border: 1px solid #454b66;
   border-radius: 5px;
   text-align: center;
 }
 
 .container1 .btn1:hover {
-  background-color: #454b66;
+  background-color: #94c5cc;
 }
 /* --------------------------------------------------------------------------------
 Button
