--- a/src/components/OwnerRequestDetails/OwnerRequestDetails.css
+++ b/src/components/OwnerRequestDetails/OwnerRequestDetails.css
@@ -1,31 +1,26 @@
 .request-details {
-  background-color: #fff;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 55vh;
 }
 
 .request-details-header {
   font-size: 24px;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
+  color: #333333;
   margin-bottom: 20px;
 }
 
 .grid-content-section {
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
+  background-color: #f9f0f4;
+  border: 1px solid #f9f0f4;
   padding: 20px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.6);
 }
 
 .request-details-text {
   font-size: 18px;
-  color: #333;
+  color: #333333;
   margin-bottom: 20px;
 }
 
