--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -218,7 +218,8 @@ Cleaning Standars Treatment
 
 .cleaning-standards-div {
   padding: 20px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   width: 100%;
   max-width: 90%;
