--- a/src/components/WhyUs/WhyUs.css
+++ b/src/components/WhyUs/WhyUs.css
@@ -12,6 +12,9 @@ Container
 .why-container{
     text-align: justify;
     padding: auto;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
