--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -15,12 +15,6 @@ container
   padding: 15px;
 }
 
-.owners-container {
-  background-color: white;
-  text-align: center;
-  padding: 20px;
-}
-
 .keepers-container {
   background-color: #da9494;
 }
@@ -31,6 +25,62 @@ container
   text-align: center;
 }
 
+/* --------------------------------------------------------------------------------
+owners-container (div)
+-------------------------------------------------------------------------------- */
+.owners-container {
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.owners-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.owners-text {
+  flex: 1;
+  padding-left: 20px;
+}
+
+img {
+  flex: 0.4;
+}
+
+/* --------------------------------------------------------------------------------
+owners-request-service
+-------------------------------------------------------------------------------- */
+.image-container {
+  display: inline-block;
+  float: left;
+}
+
+.text-container {
+  display: inline-block;
+  width: 55%;
+  height: 200px;
+  margin: 0 0 0 20px;
+}
+
+/* --------------------------------------------------------------------------------
+commotion-section
+-------------------------------------------------------------------------------- */
+.commotion-section {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.content-wrapper {
+  max-width: 65%;
+  text-align: center;
+  margin-right: 20px;
+}
 /* --------------------------------------------------------------------------------
 fade in on scroll
 -------------------------------------------------------------------------------- */
@@ -81,13 +131,6 @@ keepers section
   align-self: center;
 }
 
-.keepers-practice {
-  background-color: #94c5cc;
-  padding: 5px;
-  padding-bottom: 20px;
-  margin-top: 30px;
-}
-
 /* --------------------------------------------------------------------------------
 keepers section - NavLink - Maid Ready Cleaning Standards css
 --------------------------------------------------------------------------------- */
@@ -120,6 +163,27 @@ booked-section
 -------------------------------------------------------------------------------- */
 .booked-section {
   background-color: white;
+  padding: 5px;
+  padding-bottom: 20px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-wrapper {
+  margin-right: 1rem;
+}
+
+.text-wrapper {
+  text-align: center;
+}
+
+/* --------------------------------------------------------------------------------
+keepers-practice
+-------------------------------------------------------------------------------- */
+.keepers-practice {
+  background-color: #94c5cc;
   padding: 5px;
   padding-bottom: 20px;
   margin-top: 30px;
